--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/G6SIcs01.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Area - Browse Everything | Data Analytics Platform</title>
-    <meta name="description" content="Turn your regional data into powerful insights with Area. Ultra-fast browsing, advanced AI insights, and seamless integration for strategic business growth." />
-    <meta name="author" content="Area" />
+    <title>Fornix - AI-Powered Talent Platform</title>
+    <meta name="description" content="Revolutionize your hiring process with Fornix. AI-powered talent matching, verified candidate profiles, and streamlined recruitment for modern companies." />
+    <meta name="author" content="Fornix AI" />
 
-    <meta property="og:title" content="Area - Browse Everything | Data Analytics Platform" />
-    <meta property="og:description" content="Turn your regional data into powerful insights with Area. Ultra-fast browsing, advanced AI insights, and seamless integration for strategic business growth." />
+    <meta property="og:title" content="Fornix - AI-Powered Talent Platform | Smart Hiring Solutions" />
+    <meta property="og:description" content="Revolutionize your hiring process with Fornix. AI-powered talent matching, verified candidate profiles, and streamlined recruitment for modern companies." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/G6SIcs01.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@FornixAI" />
+    <meta name="twitter:title" content="Fornix - AI-Powered Talent Platform" />
+    <meta name="twitter:description" content="Revolutionize your hiring process with Fornix. AI-powered talent matching, verified candidate profiles, and streamlined recruitment." />
+    <meta name="twitter:image" content="/src/assets/G6SIcs01.svg" />
   </head>
 
   <body>
